# mintwit

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  app.py  cli2.py  pyproject.toml  readme.md
mintwit/: app.py  cli2.py
