[tool.poetry]
name = "mintwit"
version = "0.1.0"
description = "minimal twitter clone"
authors = ["Shahriar <me@shahriar.ee>"]
readme = "README.md"
packages = [{ include = "mintwit" }]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.13"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
waitress = "^3.0.2"


[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"
prettytable = "^3.9.0"
prompt-toolkit = "^3.0.43"
colorama = "^0.4.6"
isort = "^5.13.2"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"